--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "author": "Anthony Autrey",
     "license": "ISC",
     "dependencies": {
+        "seedrandom": "^3.0.5",
         "typescript": "^4.1.5"
     },
     "devDependencies": {}
