--- a/package.json
+++ b/package.json
@@ -2,24 +2,21 @@
     "name": "mythos-ipsum",
     "version": "1.0.7",
     "description": "Generates random fantasy words, names, sentences, paragraphs, and even UUIDs.",
-    "main": "mythos-ipsum.js",
-    "types": "dist",
-    "files": [
-        "mythos-ipsum.js",
-        "types.d.ts"
-    ],
+    "main": "dist/index.js",
+    "types": "dist/index.d.ts",
     "scripts": {
         "start": "nodemon --exec ts-node main.ts",
         "build": "rm -rf dist && tsc",
+        "prepublish": "npm run build",
         "patch": "npm version patch && npm publish && git push --tags"
     },
     "author": "Anthony Autrey",
     "license": "ISC",
     "dependencies": {
-        "seedrandom": "^3.0.5",
-        "typescript": "^4.1.5"
+        "seedrandom": "^3.0.5"
     },
     "devDependencies": {
-        "nodemon": "^2.0.7"
+        "nodemon": "^2.0.7",
+        "typescript": "^4.1.5"
     }
 }
